[project]
name = "image-warp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koei-kaji", email = "koei.kaji@gmail.com" }
]
dependencies = [
    "pydantic>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.285",
    "mypy>=1.5.1",
    "black>=23.7.0",
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py311"

# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-rsxX -s -x -v"
